@@ -2,15 +2,39 @@
 
 <img src ="https://github.com/user-attachments/assets/ff00860e-46fe-4614-b7d8-a8fd748db577" width=100%>
 
+## Intro
 
+This repository is a copy of my group's implementation of Boulder Dash. My group's repository can be found <a href="https://github.com/Karamveer9200/Boulder-Dash-Remake">here!</a> 
 
-Link to original Boulder Dash Group Project: https://github.com/Karamveer9200/Boulder-Dash-Remake
+Boulder Dash is a classic 1984 Atari game. The player digs through dirt-filled caves, collecting diamonds while avoiding falling rocks and enemies, with the goal of reaching the exit before time runs out.
 
-## About
+This repository is a showcase of our game and my work.
 
-Copied my groups project to a personal repository to refactor and showcase my work.
+## Demo
 
--My contributions...
+## Features
+My contributions...
+
+## Set up
+
+I chose not to package an executable because I want this repository to highlight the actual source code and JavaFX setup
+
+### Requirements
+- JDK 21
+- JavaFX SDK 21.0.5
+
+### Steps
+
+*Steps shown are based on IntelliJ IDEA. Other IDEs will follow a similar process.*
+
+1) Clone this repository into your IDE as a Java Project.
+2) Download <a href="https://gluonhq.com/products/javafx/">JavaFX SDK 21.0.5</a>  and save it somewhere accessible on your computer.
+3) In your IDE, go to Project Structure and add both the lib folder from JavaFX SDK and the src folder of this project.
+4) Go to Run/Debug Configurations → VM options and add: --module-path "path/to/javafx-sdk-21.0.5/lib" --add-modules javafx.controls,javafx.fxml
+5) Make sure the 'resourses' folder is marked as 'Resources Root' and java folder is marked as 'Sources Root'.
+6) Run the game and enjoy!
+
+## Experience and Lessons Learnt
 
 ## Acknowledgements
 
@@ -21,5 +45,3 @@ A big thank you to my teammates for their collaboration and hard work on this pr
 - @Superaka5
 - @rhysll
 - @Tahi-rahman
-
-## Setup
